--- a/LordLamington.Heartcore.Web/Views/_ViewImports.cshtml
+++ b/LordLamington.Heartcore.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using LordLamington.Heartcore.Web.Models
 @using LordLamington.Heartcore.Web.Extensions
 @using Umbraco.Headless.Client.Net.Delivery.Models
+@using Microsoft.AspNetCore.Html
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
