--- a/LordLamington.Heartcore.Web/Views/DefaultUmbraco/Home.cshtml
+++ b/LordLamington.Heartcore.Web/Views/DefaultUmbraco/Home.cshtml
@@ -34,6 +34,4 @@
     </div>
     }
 
-    @*@{
-        Html.RenderPartial("Products");
-    }*@
+@await Component.InvokeAsync("ProductCollection")
