--- a/LordLamington.Heartcore.Web/Views/_ViewImports.cshtml
+++ b/LordLamington.Heartcore.Web/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using LordLamington.Heartcore.Web.Extensions
 @using Umbraco.Headless.Client.Net.Delivery.Models
 @using Microsoft.AspNetCore.Html
+@using LordLamington.Heartcore.Web.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
