--- a/LordLamington.Heartcore.Web/wwwroot/css/style_VII.css
+++ b/LordLamington.Heartcore.Web/wwwroot/css/style_VII.css
@@ -2470,7 +2470,7 @@ padding-top:25px;
 .ck_bc_main_wrapper{
 	padding-top:100px;
 	padding-bottom:100px;
-	background:#f6f6f6;
+	/*background:#f6f6f6;*/
 }
 .ck_heading_center_wrapper_bc h3{
 	color:#3d3d3d;
