--- a/LordLamington.Heartcore.Web/Views/Shared/Components/ProductCollection/Default.cshtml
+++ b/LordLamington.Heartcore.Web/Views/Shared/Components/ProductCollection/Default.cshtml
@@ -15,7 +15,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
                     <div class="ck_elem_slide_img_wrapper float_left">
                         <div class="ck_elem_slide_img float_left">
-                            <img src="@product.Image.Url" alt="img">
+                            <img src="@product.Image.Url?width=300&height=200&mode=crop" alt="img">
                             <h5>$ @product.Price</h5>
                         </div>
                         <div class="ck_elem_slide_img_cont float_left">
